# ccv

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  Readme.md  change-log.json  dev-hints.md  index.html  latest.json  package-lock.json  package.json  snapcraft.yaml  splashscreen.html  tauri.conf.json  todos.md  updates.json  vite.config.ts  wish-list.md
.github/workflows/: check-release.yml  check-version.yml  my-check.yml  release.yml  rust_test.yml  test.yml
public/: Dark.css  Dark.css.map  Light.css  Light.css.map
screens/: about.html  main.html  primary.html  settings.html  splashscreen.html
scripts/docker_build/: Dockerfile  run.sh
src/: App.tsx  api.ts  events.ts  highlight-search-term.d.ts  index.html  main.rs  main.tsx  theme.css  theme.css.map  theme.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/ccv/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/ccv/capabilities/: default.json
src-tauri/ccv/icons/: icon.icns
src-tauri/ccv/src/: events.rs  lib.rs  main.rs  screens.rs  shortcut.rs  state.rs  tray.rs
src-tauri/ccv/src/about/: commands.rs  mod.rs
src-tauri/ccv/src/commands/: about.rs  main.rs  mod.rs  settings.rs  utils.rs
src-tauri/ccv/src/primary/: commands.rs  core.rs  mod.rs  setup.rs  state.rs
src-tauri/ccv/src/settings/: autostart.rs  commands.rs  core.rs  mod.rs  setup.rs  shortcut.rs  state.rs
src-tauri/ccv/src/settings/hotkeys/: linux.rs  mod.rs  non_linux.rs
src-tauri/ccv/src/splashscreen/: mod.rs
src-tauri/ccv/src/tray/: menus.rs  mod.rs  setup.rs
src-tauri/ccv/src/utils/: mod.rs  window.rs
src-tauri/ccv_contract/: Cargo.toml
src-tauri/ccv_contract/src/: error.rs  lib.rs  models.rs  repository.rs
src-tauri/ccv_in_memory/: Cargo.toml
src-tauri/ccv_in_memory/src/: lib.rs  repository.rs  sample_data.rs
src-tauri/ccv_sqlite/: Cargo.toml
src-tauri/ccv_sqlite/migrations/2024-07-28-192745_create_copy_items/: down.sql  up.sql
src-tauri/ccv_sqlite/src/: enum_converter.rs  lib.rs  model.rs  repository.rs  schema.rs
src-tauri/ccv_sqlite/tests/: repository.rs
src-tauri/ccv_sqlite/tests/common/: mod.rs
src-tauri/examples/: copy.rs  mac.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  screens.rs  tray.rs
src/about/: App.module.css  App.tsx  index.tsx  useBackend.ts
src/common/: AboutContext.ts  AppWrapper.tsx  SettingsContext.ts  commands.ts  contract.ts  events.ts  keyboard.ts  useDebouncedCallback.ts  useSubscribeEvent.ts
src/common/wrapper/: AppWrapper.module.css  AppWrapper.tsx
src/main/: App.css  App.module.css  App.tsx  SearchContext.ts  api.ts  index.tsx  useBackend.ts
src/main/copyItemsList/: CopyItemsList.module.css  CopyItemsList.tsx
src/main/item/: Item.module.css  Item.tsx
src/main/itemPreview/: FilePreview.module.css  FilePreview.tsx  ItemPreview.module.css  ItemPreview.tsx  RtfPreview.module.css  RtfPreview.tsx
src/main/itemsList/: ItemsList.module.css  ItemsList.tsx
src/main/orchestrator/: Orchestrator.tsx  useListenClipboardEvents.ts  useListenGlobalEvents.ts
src/main/toolbar/: Toolbar.module.css  Toolbar.tsx  useDebouncedCallback.ts
src/main/utils/: useDebouncedCallback.ts
src/primary/: App.module.css  App.tsx  SearchContext.ts  useBackend.ts  useListenClipboard.ts
src/primary/container/: Container.module.css  Container.tsx
src/primary/file/: File.module.css  File.tsx
src/primary/item/: Item.module.css  Item.tsx
src/primary/itemPreview/: FilePreview.module.css  FilePreview.tsx  ItemPreview.module.css  ItemPreview.tsx  RtfPreview.tsx
src/primary/itemsList/: ItemsList.module.css  ItemsList.tsx
src/primary/notifications/: Notifications.css  Notifications.tsx  OccupiedShortcutDialog.tsx  UpdateDialog.module.css  UpdateDialog.tsx  WelcomeDialog.tsx
src/primary/toolbar/: Toolbar.tsx  categoryHelper.ts
src/settings/: App.module.css  App.tsx  useBackend.ts
src/splashscreen/: App.css  App.tsx  index.tsx  main.tsx
