[package]
name = "ccv"
version = "0.1.0"
authors = ["Andrei Sirotenko <panshirotenski@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = "1.5.2"

[dependencies]
# image = "0.25"
# tray-icon = {version = "0.14.3"}
# tao = "0.27"
# gtk = "0.18"
tauri = {version = "1.6.8", features = ["custom-protocol", "system-tray"]}