[workspace]
members = ["ccv", "ccv_contract", "ccv_in_memory", "ccv_sqlite"]
resolver = "2"

[workspace.package]
version = "0.1.1" # Also update version at ./ccv/tarui.conf.json
authors = ["Andrei Sirotenko <panshirotenski@gmail.com>"]
homepage = "https://github.com/ansirotenko/ccv"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
cfg-if = { version = "1.0.0"}
log = { version = "0.4"}
