[package]
name = "ccv"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
description = "CCV is lightweight crossplatform clipboard manager. It uses sqlite to store all clipboard history. Supports formats: Text, Html, Rtf, Images, Files."
edition = "2021"

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
ccv_contract = { path = "../ccv_contract" }
ccv_in_memory = { path = "../ccv_in_memory" }
ccv_sqlite = { path = "../ccv_sqlite", optional = true }
cfg-if = { workspace = true }
clipboard-rs = { version = "0.1.11" }
chrono = { workspace = true }
global-hotkey = { version = "0.6.2" }
log = { workspace = true }
open = { version = "5.3.0" }
serde = { workspace = true }
serde_json = { version = "1.0.127" }
tauri = { version = "1.6.8", features = [
    "global-shortcut-all",
    "shell-open",
    "system-tray",
    "window-all",
    "updater",
] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-clipboard = { version = "1.1.3" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = ["sqlite"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
sqlite = ["dep:ccv_sqlite"]
in-memory-test-data = []
