[package]
name = "ccv"
version.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
description = "CCV is lightweight crossplatform clipboard manager. It uses sqlite to store all clipboard history. Supports formats: Text, Html, Rtf, Images, Files."
edition = "2021"

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ccv_contract = { path = "../ccv_contract" }
ccv_in_memory = { path = "../ccv_in_memory" }
ccv_sqlite = { path = "../ccv_sqlite", optional = true }
clipboard-rs = { version = "0.2.1" }
chrono = { workspace = true }
log = { workspace = true }
open = { version = "5.3.0" }
serde = { workspace = true }
serde_json = { version = "1.0.127" }
tauri = { version = "2.0.2", features = ["tray-icon"] }
tauri-plugin-autostart = { version = "2.0.1" }
tauri-plugin-clipboard = { version = "2.1.9" }
tauri-plugin-global-shortcut = { version = "2.0.1" }
tauri-plugin-log = { version = "2.0.1" }
tauri-plugin-process = { version = "2.0.1" }
tauri-plugin-single-instance = { version = "2.0.1" }
tauri-plugin-shell = { version = "2.0.1" }
tauri-plugin-updater = { version = "2.0.2" }

[target."cfg(target_os = \"linux\")".dependencies]
global-hotkey = { version = "0.6.2" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[features]
default = ["sqlite"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
sqlite = ["dep:ccv_sqlite"]
in-memory-test-data = []
